--- a/index.html
+++ b/index.html
@@ -2,19 +2,30 @@
 <html lang="en-us">
 
 <head>
-
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Nick Kuehlem">
+    <meta name="description" content="Nick Kuehlem Portfolio">
+    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Ubuntu:400,700|Abel&display=swap" rel="stylesheet">
 	<title>Nick Kuehlem</title>
-
-	
-
 </head>
 
 <body>
 
     <main>
+        <h1>HOME-Lato</h1>
+        <p>---</p>
+        <h1 class="ubuntu">Home - Ubuntu</h1>
+        <h1 calss="abel">Home-ABEL</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        <p class="ubuntu"> Ubuntu Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+
+        <p class="color-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        <p class="ubuntu, color-secondary">Ubuntu Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        
+        <p class="color-secondary, abel">The spectacle before us was indeed sublime.
+            Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the middle of an immense dark sphere, whose upper half was strewn with silver. Looking down into the dark gulf below, I could see a ruddy light streaming through a rift in the clouds.</p>
         <a href="https://coolors.co/0b132b-1c2541-3a506b-5bc0be-6fffe9-050609-f9f9f9-e1e1e1">the coolors
         <img src="images/coolors.JPG" alt="palette">
         </a>
