spell class right

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>HOME-Lato</h1>
         <p>---</p>
         <h1 class="ubuntu">Home - Ubuntu</h1>
-        <h1 calss="abel">Home-ABEL</h1>
+        <h1 class="abel">Home-ABEL</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         <p class="ubuntu"> Ubuntu Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 
