added nav css underline :hover

--- a/project-2.html
+++ b/project-2.html
@@ -35,10 +35,11 @@
           </ul>
         </div>
       </nav>
+      -->
 
     <main>
         <h1>Project 2</h1>
-    </main> -->
+    </main> 
     
 </body>
 
