added images, resume, grid for projects

--- a/project-1.html
+++ b/project-1.html
@@ -14,6 +14,7 @@
 <body>
     <header>
         <nav>
+            <div class="logo">Nick Kuehlem</div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="resume.html">Resume</a></li>
@@ -40,6 +41,17 @@
         <h1>Project 1</h1>
     </main>
     
+    <footer>
+        <p> Nick Kuehlem Portfolio Page</p>
+        <p>© 2020 Nick Kuehlem</p>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="potfolio.html">Portfolio</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 
 </html>
