--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,10 @@
 </head>
 
 <body>
+
     <header>
         <nav>
+            <div class="logo">Nick Kuehlem</div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="resume.html" class="active">Resume</a></li>
@@ -38,12 +40,57 @@
       </nav> -->
 
     <main>
-        <div class="logo">Nick Kuehlem</div>
-        <h1>Resume</h1>
-        <h2>Education</h2>
-        <h2>Experience</h2>
-        <h2>Skills</h2>
+
+        <div class="container-resume">
+            <h2>Experience</h2>
+            <h3> Bioware - Austin, Texas</h3>
+            <p> 2010-2012</p>
+            <p> Self taught scripting to get the job</p>
+            <p> Worked on block out design team to prototype, test and build game levels</p>
+            <p> Handled several non-player facing systems involving massive spreadsheet data</p>
+            <p> Helped coordinate implementation methods with audio team on daily basis </p>
+            <p> Tested several typed of game maps including high end raids and new expansion content.</p>
+
+            <h3> Loot Vintage - Austin, Texas</h3>
+            <p> 2012 to 2017</p>
+            <p> Designed and crafted backdrops, center pieces, and accent pieces for large and small events.</p>
+            <p> Repaired and restored LOTS of vintage desks, couches, chairs, tables, and other decor</p>
+            <p> Fabricated storage, and transport containers for fragile, large, or odd pieces.</p>
+
+            <h3>Service Industry</h3>
+            <h4>Chili's Bar & Grill - Front of house staff</h4>
+            <p> Learned to handle every type of person, as to make them pleased</p>
+            <p> Listening skills</p>
+            <p> socials skills></p>
+        </div>
+
+        <div class="container-resume">
+            <h2>Education</h2>
+            <h3> Austin Community College </h3>
+            <p>2018 to 2020</p>
+        </div>
+        
+        <div class="container-resume">
+            <h2>Skills</h2>
+            <p>User Experience Design, User Interface Design, Research Design, 
+                Human Centered Design, Prototyping, UserFlows, Personas, User
+                Testing, HTML/CSS, Swift, Figma, XD, Illistrator, Photoshop, InVision, Many
+                game engines, Office, Excel, Perforce, DevTrack, Agile
+                Environments, Scrum Environments, Good Listener, and a Life Long Learner </p>
+        </div>
     </main>
+
+    <footer>
+        <p> Nick Kuehlem Portfolio Page</p>
+        <p>© 2020 Nick Kuehlem</p>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="potfolio.html">Portfolio</a></li>
+            </ul>
+        </nav>
+    </footer>
     
 </body>
 
