--- a/potfolio.html
+++ b/potfolio.html
@@ -42,52 +42,52 @@
         <div class="grid">
             <div>This was a simple re design of the netflix scrolling cards. A micro interaction test, as well as adding a friends list to Netflix.</div>
             <div class="normal-button-link"><a href="project-1.html">Netflix Redesign</a></div>
-            <div><img src="images/netflix.JPG" alt="netflix re design"></div>
+            <div><img src="images/netflix.JPG" alt="netflix re design" class="pulse-animation"></div>
 
-            <div><img src="images/airbnblanding.JPG" alt="air b & b landing page"></div>
+            <div><img src="images/airbnblanding.JPG" alt="air b & b landing page" class="pulse-animation"></div>
             <div class="normal-button-link"><a href="project-2.html">Landing Page</a></div>
             <div>A project for Visual Design to make a Landing page for Air B&B</div>
 
-            <div>Text</div>
+            <div>Tree testing and sitemaps</div>
             <div class="normal-button-link"><a href="project-1.html">Blanton</a></div>
-            <div><img src="images/placeholder.jpg" alt="placeholder"></div>
+            <div><img src="images/placeholder.jpg" alt="placeholder" class="pulse-animation"></div>
 
             <div><img src="images/placeholder.jpg" alt="placeholder"></div>
             <div class="normal-button-link"><a href="project-2.html">Foodie App</a></div>
-            <div>Text</div>
+            <div>An exercise in mobile apps</div>
 
-            <div>Text</div>
+            <div>Creating a design system with css and html</div>
             <div class="normal-button-link"><a href="project-1.html">Design System</a></div>
-            <div><img src="images/placeholder.jpg" alt="placeholder"></div>
+            <div><img src="images/placeholder.jpg" alt="placeholder" class="pulse-animation"></div>
 
-            <div><img src="images/placeholder.jpg" alt="placeholder"></div>
+            <div><img src="images/placeholder.jpg" alt="placeholder" class="pulse-animation"></div>
             <div class="normal-button-link"><a href="project-2.html">Star Wars</a></div>
-            <div>Text</div>
+            <div>The video game I helped to create</div>
 
-            <div>Text</div>
+            <div>Lean UX methods</div>
             <div class="normal-button-link"><a href="project-1.html">Design Thinking</a></div>
-            <div><img src="images/placeholder.jpg" alt="placeholder"></div>
+            <div><img src="images/placeholder.jpg" alt="placeholder" class="pulse-animation"></div>
 
-            <div><img src="images/placeholder.jpg" alt="placeholder"></div>
+            <div><img src="images/placeholder.jpg" alt="placeholder" class="pulse-animation"></div>
             <div class="normal-button-link"><a href="project-2.html">Find a problem</a></div>
-            <div>Text</div>
+            <div>How to find and solve a problem</div>
 
-            <div>Text</div>
+            <div>Vector graphic flier</div>
             <div class="normal-button-link"><a href="project-1.html">Symphony</a></div>
-            <div><img src="images/placeholder.jpg" alt="placeholder"></div>
+            <div><img src="images/placeholder.jpg" alt="placeholder" class="pulse-animation"></div>
         
 
-            <div><img src="images/placeholder.jpg" alt="placeholder"></div>
+            <div><img src="images/placeholder.jpg" alt="placeholder" class="pulse-animation"></div>
             <div class="normal-button-link"><a href="project-2.html">User Research</a></div>
-            <div>Text</div>
+            <div>Next semester</div>
 
-            <div>Text</div>
+            <div>User Interfaces</div>
             <div class="normal-button-link"><a href="project-1.html">Trash aid</a></div>
-            <div><img src="images/placeholder.jpg" alt="placeholder"></div>
+            <div><img src="images/placeholder.jpg" alt="placeholder" class="pulse-animation"></div>
 
             <div><img src="images/placeholder.jpg" alt="placeholder"></div>
-            <div class="normal-button-link"><a href="project-2.html">Audio </a></div>
-            <div>Text</div>
+            <div class="normal-button-link"><a href="project-2.html" class="pulse-animation">Audio </a></div>
+            <div>Audio, much harder than you thought!</div>
             
         </div>
 
