--- a/project-1.html
+++ b/project-1.html
@@ -38,7 +38,23 @@
       </nav> -->
 
     <main>
-        <h1>Project 1</h1>
+        <h1>Netflix: a natural swipe for tablet</h1>
+        
+        <h2>First we sketch!</h2>
+        <img src="images/netflix-sketch.jpg" alt="sketch" class="large-img">
+        <p>Simple yet satisfying! the Idea here was to make a small change to enhance a Users natural movements with swiping on a tablet</p>
+
+        <h2>Lets add some color</h2>
+        <img src="images/netflix-colors.JPG" alt="colors" class="large-img">
+        <p>A quick research into colors of netflix and official logos</p>
+
+        <h2>Up the Ante</h2>
+        <img src="images/netflix1-page-001.jpg" alt="midfi" class="large-img">
+        <p>Just to get something digital to work from</p>
+
+        <h2>Fin</h2>
+        <img src="images/netflix.JPG" alt="final" class="large-img">
+        <p>After user testing and simplification </p>
     </main>
     
     <footer>
