--- a/project-2.html
+++ b/project-2.html
@@ -39,7 +39,31 @@
       -->
 
     <main>
-        <h1>Project 2</h1>
+        <h1>AirB&B Lanting page</h1>
+        
+        <h2>lets start with what we had at the sketch</h2>
+        <img src="images/abnb-1.jpg" alt="sketch" class="large-img">
+        <p> and decicde to make the image full page </p>
+
+        <h2></h2>
+        <img src="images/abnb2-page-001.jpg" alt="colors" class="large-img">
+        <p>nope</p>
+
+        <h2></h2>
+        <img src="images/abnb4-page-001.jpg" alt="midfi" class="large-img">
+        <p>nope</p>
+
+        <h2></h2>
+        <img src="images/abnb6-001.jpg" alt="final" class="large-img">
+        <p>nope</p>
+
+        <h2></h2>
+        <img src="images/abnb8-001.jpg" alt="final" class="large-img">
+        <p> so close</p>
+
+        <h2>lets try a shadow effect!</h2>
+        <img src="images/abnbf-page-001.jpg" alt="final" class="large-img">
+        <p> opacity what is that? </p>
     </main> 
     
     <footer>
