--- a/resume.html
+++ b/resume.html
@@ -61,7 +61,7 @@
             <h4>Chili's Bar & Grill - Front of house staff</h4>
             <p> Learned to handle every type of person, as to make them pleased</p>
             <p> Listening skills</p>
-            <p> socials skills></p>
+            <p> Socials skills</p>
         </div>
 
         <div class="container-resume">
